--- a/etc/ucr.conf
+++ b/etc/ucr.conf
@@ -4,14 +4,14 @@
 xres=640
 yres=400
 splashmusic=1
-pixmaps=/usr/games/ucr-0.1.3/pixmaps
-datapath=/usr/games/ucr-0.1.3/data
-u1path=/usr/games/ucr-0.1.3/games/u1
-u2path=/usr/games/ucr-0.1.3/games/u2
-u3path=/usr/games/ucr-0.1.3/games/u3
-u4path=/usr/games/ucr-0.1.3/games/u4
-u5path=/usr/games/ucr-0.1.3/games/u5
-u6path=/usr/games/ucr-0.1.3/games/u6
+pixmaps=./pixmaps
+datapath=./data
+u1path=./games/u1
+u2path=./games/u2
+u3path=./games/u3
+u4path=./games/u4
+u5path=./games/u5
+u6path=./games/u6
 u0sound=1
 u0sfx=1
 u0svga=1
